--- a/deepCroston.ipynb
+++ b/deepCroston.ipynb
@@ -63,7 +63,7 @@
     "    return df\n",
     "\n",
     "#read dataframe\n",
-    "df = read_data(\"./daily_amount.csv\")\n",
+    "df = read_data(\"daily_67_amount.csv\")\n",
     "target = \"amount\""
    ]
   },
